[gd_scene load_steps=6 format=3 uid="uid://csdyueu8l7yd0"]

[ext_resource type="Texture2D" uid="uid://bi6qg8kiipxf2" path="res://UIObjects/Assets/HUD/VectorGraphics/HealthUI/HealthPipFull.png" id="1_qr8gr"]
[ext_resource type="Script" path="res://UIObjects/BaseFacilityMenu/Crafting/UIElements/CraftingRecipePowerCostUIElement.gd" id="1_wkyud"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_vqhdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vhoc"]
bg_color = Color(0.193463, 0.499772, 5.77569e-07, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u53t5"]
bg_color = Color(0.771541, 0.0711274, 0.255872, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="CraftingRecipePowerCostUIElement" type="BoxContainer"]
script = ExtResource("1_wkyud")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PowerPipImage" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("1_qr8gr")
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqhdo")
theme_override_font_sizes/font_size = 23
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnoughQuantityIndicator" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2vhoc")

[node name="NotEnoughQuantityIndicator" type="Panel" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_u53t5")
